kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: key-value-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: key-value-app
  template:
    metadata:
      labels:
        app: key-value-app
    spec:
      containers:
      - name: key-value-app
        image: lamnt67/in-memory-key-value-service:fc99d85
        ports:
        - containerPort: 8088

---

apiVersion: v1
kind: Service
metadata:
  name: key-value-service
spec:
  selector:
    app: key-value-app
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8088
  type: ClusterIP
